--- a/Tox.ini
+++ b/Tox.ini
@@ -1,11 +1,11 @@
 [tox]
-envlist =  py39
+envlist = py39
 skipsdist = True
  
 [testenv]
 deps =
     pytest
     coverage
-commands = pytest --cov=app --cov-report=xml --cov-config=tox.ini --cov-branch
+commands = pytest --cov=my_project --cov-report=xml --cov-config=tox.ini --cov-branch
  
 [coverage:run]
