--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
 sonar.projectKey=SalvadorHilares_python_sonar
 sonar.organization=salvadorhilares
 
+sonar.python.coverage.reportPaths=coverage.xml
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=python_sonar
 #sonar.projectVersion=1.0
